[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="QuadMesh" id=2]

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]

[sub_resource type="QuadMesh" id=5]

[node name="World" type="Spatial"]

[node name="Player" type="KinematicBody" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Player"]
mesh = SubResource( 2 )

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.19657 )

[node name="Ground collider" type="Area" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.557511, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Player/Ground collider"]
transform = Transform( 0.5, 0, 0, 0, 0.04, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="roof collider" type="Area" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5225, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Player/roof collider"]
transform = Transform( 0.5, 0, 0, 0, 0.04, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="right wall collider" type="Area" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.609304, 0.0477898, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Player/right wall collider"]
transform = Transform( 0.1, 0, 0, 0, 0.04, 0, 0, 0, 1, -0.107381, 0, 0 )
shape = SubResource( 3 )

[node name="left wall collider" type="Area" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.350845, 0.0477898, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Player/left wall collider"]
transform = Transform( 0.1, 0, 0, 0, 0.04, 0, 0, 0, 1, -0.107381, 0, 0 )
shape = SubResource( 3 )

[node name="Platform1" type="KinematicBody" parent="."]

[node name="platform 1" type="CollisionShape" parent="Platform1"]
transform = Transform( 10, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, -1.77221, 0 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Platform1/platform 1"]
transform = Transform( 2, 0, 0, 0, 2.5, 0, 0, 0, 1, 0, -0.195212, 0 )
mesh = SubResource( 5 )

[node name="platform 2" type="CollisionShape" parent="Platform1"]
transform = Transform( -4.37114e-08, -0.5, 0, 1, -2.18557e-08, 0, 0, 0, 1, -1.59206, -0.265872, 0 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Platform1/platform 2"]
transform = Transform( 2, 0, 0, 0, 2.5, 0, 0, 0, 1, 0, -0.195212, 0 )
mesh = SubResource( 5 )

[node name="platform 3" type="CollisionShape" parent="Platform1"]
transform = Transform( -4.37114e-08, -0.5, 0, 1, -2.18557e-08, 0, 0, 0, 1, -4.33464, 3.74683, 0 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Platform1/platform 3"]
transform = Transform( 2, 0, 0, 0, 2.5, 0, 0, 0, 1, 0, -0.195212, 0 )
mesh = SubResource( 5 )

[node name="platform 4" type="CollisionShape" parent="Platform1"]
transform = Transform( -4.37114e-08, -0.5, 0, 1, -2.18557e-08, 0, 0, 0, 1, -1.27432, 6.8905, -0.0486293 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Platform1/platform 4"]
transform = Transform( 2, 0, 0, 0, 2.5, 0, 0, 0, 1, 0, -0.195212, 0 )
mesh = SubResource( 5 )

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( -1, 162 )
normal = ExtResource( 2 )

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 134, 159 )
normal = ExtResource( 2 )

[node name="Jump" type="TouchScreenButton" parent="."]
position = Vector2( 75, 42 )
normal = ExtResource( 2 )

[connection signal="pressed" from="Left" to="Player" method="_on_Left_pressed"]
[connection signal="released" from="Left" to="Player" method="_on_Left_released"]
[connection signal="pressed" from="Right" to="Player" method="_on_Right_pressed"]
[connection signal="released" from="Right" to="Player" method="_on_Right_released"]
[connection signal="pressed" from="Jump" to="Player" method="_on_Jump_pressed"]
[connection signal="released" from="Jump" to="Player" method="_on_Jump_released"]
